	- When assigning turret targets, AI now checks if target is within max range of the turret.
	- Add an option to disable the behaviour of disabling guard mode when vessels are spawned.
	- Fix pilot AI's standby mode to automatically trigger AG10 and enable engines if necessary when a threat is detected.
- Countermeasures:
	- Add 'Ammo' gauges for Countermeasure dispensers for how many CMs they have remaining.
- Sensors:
	- Add support for slaving turrets via targeting cameras.
	- Fix 'Slave Turret' button occasionally locking the turret to the vessel's origin point or non-target point in space.
	- Locking a target will no longer automatically slave active turrets to the target when manually controlling a craft. To slave turrets to a locked radar/camera, use the 'Slave Turret' button.
	- Fix bug that allowed radars to lock on below the radar horizon when the appropriate settings are toggled.
- Weapons:
	- Add a "Yaw Standby Angle" slider to gun turrets.
	- Multi-barreled guns now no longer swap to the next ammo type in the belt until after all barrels have fired.
	- Remove maxEngagementRange (default 5000m) check from bombs when AI is selecting what weapon to use.
	- Fix aim lead offset for weapons with deploy animations.
	- Missiles:
		- Add improved missile controller.
			- Missiles will now better respect gLimit as well as guidance-commanded acceleration, note this means some parameters may need to be tweaked to retain previous performance, specifically pronavGain and weave guidance accelerations.
		- Fix multi-missile launcher issues when railAmmo > launcher rails on the mode
		- Fix check for multi-mode engines being ignited and having fuel.
		- Fix maddog ARH missile launches not turning on seeker.